--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1848,6 +1848,10 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 @media (min-width: 1024px) {
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
